--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -10,7 +10,7 @@
 <h1><%= title %></h1>
 
 <label>
-用户名: <input class="user-name" type="text" placeholder="姓名">
+用户名: <input class="account" type="text" placeholder="姓名">
 </label>
 <label>
 密码：<input class="password" type="password" placeholder="密码">
@@ -22,7 +22,7 @@
 <script type="text/javascript" src="/static/plugins/jquery.min.js"></script>
 <script>
     function login() {
-        var name = $('.user-name').val();
+        var account = $('.account').val();
         var psw = $('.password').val();
         $.ajax({
             url: '/api/login',
@@ -30,28 +30,20 @@
                 request.setRequestHeader("restype","json");
             },
             data: {
-                userName: name,
+                account: account,
                 password: psw,
             },
             type: 'post',
             success: function (res) {
                 if (res.status === 'success') {
                     console.log(res);
-                    window.localStorage.setItem('token', res.result.token)
+                    window.localStorage.setItem('token', res.data.token)
                     window.location = '/admin'
                 } else {
                     alert(res.message);
                 }
             }
         })
-    }
-    function showList(users) {
-        var html = '';
-        for (var i = 0; i < users.length; i++) {
-            var user = users[i];
-            html += '<p><span>姓名: '+ user.name +'</span> -- <span>年龄: '+ user.age +'</span> -- <span>签名：'+ user.sign +'</span></p>'
-        }
-        $('.list').html(html);
     }
 </script>
 </body>
