--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         var age = $('.age').val();
         var sign = $('.sign').val();
         $.ajax({
-            url: '/api/add-user',
+            url: '/api/register',
             data: {
                 name: name,
                 age: age,
