--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -39,7 +39,7 @@
                                 <dd><a href="">安全设置</a></dd>
                             </dl>
                         </li>
-                        <li class="layui-nav-item" @click="logout"><a>退了</a></li>
+                        <li class="layui-nav-item" @click="logout" style="cursor: pointer;"><a>退了</a></li>
                     </ul>
                 </div>
 
