--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -37,9 +37,9 @@
                             <dl class="layui-nav-child">
                                 <dd><a href="">基本资料</a></dd>
                                 <dd><a href="">安全设置</a></dd>
+                                <dd @click="logout" style="cursor: pointer;"><a >退出</a></dd>
                             </dl>
                         </li>
-                        <li class="layui-nav-item" @click="logout" style="cursor: pointer;"><a>退了</a></li>
                     </ul>
                 </div>
 
