--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/static/images/icons/favicon.ico"/>
     <link rel="bookmark" href="/static/images/icons/favicon.ico"/>
     <link rel="stylesheet" href="/static/plugins/layui/css/layui.css">
-    <link rel="stylesheet" href="/static/admin/css/style.css">
+    <link rel="stylesheet" href="/templatesJs/admin/css/style.css">
 </head>
 <body class="layui-layout-body">
     <div id="app">
@@ -87,5 +87,5 @@
 <script type="text/javascript" src="/static/plugins/jquery.min.js"></script>
 <script type="text/javascript" src="/static/plugins/vue.min.js"></script>
 <script type="text/javascript" src="/static/plugins/layui/layui.js"></script>
-<script type="text/javascript" src="/static/admin/index.js"></script>
+<script type="text/javascript" src="/templatesJs/admin/index.js"></script>
 </html>
