--- a/templates/admin/register.html
+++ b/templates/admin/register.html
@@ -68,11 +68,9 @@
                 <input type="password" class="layui-input password" placeholder="密码">
             </div>
         </div>
-        <div class="layui-btn-group" style="display: block;height: 100px;padding-top: 20px;">
-            <div class="layui-input-block">
-                <div class="layui-btn layui-btn-normal" onclick="add()">立即注册</div>
-                <!--<div class="layui-btn layui-btn-primary" onclick="window.location = '/admin/login'">登录</div>-->
-            </div>
+        <div class="layui-btn-group layui-input-block">
+            <div class="layui-btn" onclick="add()">立即注册</div>
+            <!--<div class="layui-btn layui-btn-primary" onclick="window.location = '/admin/login'">登录</div>-->
         </div>
     </form>
 </div>
