--- a/templates/index.html
+++ b/templates/index.html
@@ -27,22 +27,25 @@
     load()
 
     async function load () {
-        console.log(await loadGet())
+        console.log(loadGet())
     }
 
      function loadGet () {
         return get()
      }
 
-    function get() {
-       return show()
+    async function get() {
+        let a = 111;
+        let b = await show();
+        let c = a + b;
+       return c;
     }
 
     function show() {
         return new Promise((resolve, reject) => {
             setTimeout(function () {
                 resolve(888)
-            }, 5000)
+            }, 2000)
         })
     }
     function add() {
