--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -2,37 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title><%= title %></title>
     <link rel="shortcut icon" href="/static/images/icons/favicon.ico"/>
     <link rel="bookmark" href="/static/images/icons/favicon.ico"/>
     <link rel="stylesheet" href="/static/plugins/layui/css/layui.css">
     <link rel="stylesheet" href="/templatesJs/admin/css/style.css">
+    <style>
+        .layui-footer, .layui-body {
+            transition: margin-left .5s;
+        }
+        .layui-logo {
+            min-width: 200px;
+            width: auto !important;
+            padding-left: 20px;
+        }
+    </style>
 </head>
 <body class="layui-layout-body">
     <div id="app">
         <transition name="appShow">
             <div v-show="appShow" class="layui-layout layui-layout-admin">
+                <!-- 头部导航栏 -->
                 <div class="layui-header">
-                    <div class="layui-logo">layui 后台布局</div>
-                    <!-- 头部区域（可配合layui已有的水平导航） -->
-                    <ul class="layui-nav layui-layout-left">
-                        <li class="layui-nav-item"><a href="">控制台</a></li>
-                        <li class="layui-nav-item"><a href="">商品管理</a></li>
-                        <li class="layui-nav-item"><a href="">用户</a></li>
-                        <li class="layui-nav-item">
-                            <a href="javascript:;">其它系统</a>
-                            <dl class="layui-nav-child">
-                                <dd><a href="">邮件管理</a></dd>
-                                <dd><a href="">消息管理</a></dd>
-                                <dd><a href="">授权管理</a></dd>
-                            </dl>
-                        </li>
-                    </ul>
+                    <div @click="layuiLogoDidClicked" class="layui-logo can-tap">
+                        <em v-if="showLeftNavBar" class="layui-icon layui-icon-spread-left"></em>
+                        <em v-if="!showLeftNavBar" class="layui-icon layui-icon-shrink-right"></em>
+                        <%= title%>
+                    </div>
                     <ul class="layui-nav layui-layout-right">
                         <li class="layui-nav-item">
                             <a href="javascript:;">
-                                <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-                                贤心
+                                <img src="/static/images/icons/user_icon.png" class="layui-nav-img">
+                                区区电脑
                             </a>
                             <dl class="layui-nav-child">
                                 <dd><a href="">基本资料</a></dd>
@@ -43,40 +45,43 @@
                     </ul>
                 </div>
 
-                <div class="layui-side layui-bg-black">
-                    <div class="layui-side-scroll">
-                        <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-                        <ul class="layui-nav layui-nav-tree"  lay-filter="test">
-                            <li class="layui-nav-item layui-nav-itemed">
-                                <a class="" href="javascript:;">所有商品</a>
-                                <dl class="layui-nav-child">
-                                    <dd><a href="javascript:;">列表一</a></dd>
-                                    <dd><a href="javascript:;">列表二</a></dd>
-                                    <dd><a href="javascript:;">列表三</a></dd>
-                                    <dd><a href="">超链接</a></dd>
-                                </dl>
-                            </li>
-                            <li class="layui-nav-item">
-                                <a href="javascript:;">解决方案</a>
-                                <dl class="layui-nav-child">
-                                    <dd><a href="javascript:;">列表一</a></dd>
-                                    <dd><a href="javascript:;">列表二</a></dd>
-                                    <dd><a href="">超链接</a></dd>
-                                </dl>
-                            </li>
-                            <li class="layui-nav-item"><a href="">云市场</a></li>
-                            <li class="layui-nav-item"><a href="">发布商品</a></li>
-                        </ul>
+                <!-- 侧边导航栏 -->
+                <transition name="showLeftNavBar">
+                    <div v-show="showLeftNavBar" class="layui-side layui-bg-green">
+                        <div class="layui-side-scroll">
+                            <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+                            <ul class="layui-nav layui-nav-tree"  lay-filter="test">
+                                <li class="layui-nav-item">
+                                    <a class="" href="javascript:;">所有商品</a>
+                                    <dl class="layui-nav-child">
+                                        <dd><a href="javascript:;">列表一</a></dd>
+                                        <dd><a href="javascript:;">列表二</a></dd>
+                                        <dd><a href="javascript:;">列表三</a></dd>
+                                        <dd><a href="">超链接</a></dd>
+                                    </dl>
+                                </li>
+                                <li class="layui-nav-item">
+                                    <a href="javascript:;">解决方案</a>
+                                    <dl class="layui-nav-child">
+                                        <dd><a href="javascript:;">列表一</a></dd>
+                                        <dd><a href="javascript:;">列表二</a></dd>
+                                        <dd><a href="">超链接</a></dd>
+                                    </dl>
+                                </li>
+                                <li class="layui-nav-item"><a href="">云市场</a></li>
+                                <li class="layui-nav-item"><a href="">发布商品</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
+                </transition>
 
-                <div class="layui-body">
-                    <!-- 内容主体区域 -->
+                <!-- 内容主体区域 -->
+                <div class="layui-body" :style="layuiBodyStyle">
                     <h1 style="padding: 15px;">{{ vueTitle }}</h1>
                     <div v-for="(item, index) in users" :key="index">{{ item.id }}- {{ item.account }}</div>
                 </div>
 
-                <div class="layui-footer">
+                <div class="layui-footer" :style="layuiFooterStyle">
                     <!-- 底部固定区域 -->
                     © layui.com - 底部固定区域
                 </div>
