--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -24,7 +24,7 @@
         <transition name="appShow">
             <div v-show="appShow" class="layui-layout layui-layout-admin">
                 <!-- 头部导航栏 -->
-                <div class="layui-header">
+                <div class="layui-header layui-bg-black">
                     <div @click="layuiLogoDidClicked" class="layui-logo can-tap">
                         <em v-if="showLeftNavBar" class="layui-icon layui-icon-spread-left"></em>
                         <em v-if="!showLeftNavBar" class="layui-icon layui-icon-shrink-right"></em>
@@ -47,10 +47,10 @@
 
                 <!-- 侧边导航栏 -->
                 <transition name="showLeftNavBar">
-                    <div v-show="showLeftNavBar" class="layui-side layui-bg-green">
+                    <div v-show="showLeftNavBar" class="layui-side layui-bg-black">
                         <div class="layui-side-scroll">
                             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-                            <ul class="layui-nav layui-nav-tree"  lay-filter="test">
+                            <ul class="layui-nav layui-nav-tree layui-bg-black"  lay-filter="test">
                                 <li class="layui-nav-item">
                                     <a class="" href="javascript:;">所有商品</a>
                                     <dl class="layui-nav-child">
