--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="app">
         <transition name="appShow">
-            <div v-show="appShow" >
+            <div v-show="appShow" class="container-fluid">
                <h1> {{ vueTitle }}</h1>
             </div>
         </transition>
